# LleidaHackBackend

./: .env  .env.example  .env.main  .firebaserc  .gitignore  .pre-commit-config.yaml  App.py  DBConnector.py  DatabaseService.py  Dockerfile  LogConfig.py  Models.py  PostgresConnector.py  PostgresTables.py  alembic.ini  config-example.ini  config.py  config.sample.ini  connector.py  database.py  docker-compose.yaml  docker-compose.yml  gunicorn_conf.py  log_config.py  main.py  postgres.py  pyproject.toml  readme.md  requirements.txt  schema.py  security.py  test.py  utils.py
.github/workflows/: code-quality.yml  deploy-improved.yml  deploy.yml  deployVPS.yml  formatting.yml  install.yaml  main.yml  pylint.yml  release-notes-generator.yml  resetDatabase.yml  test.yml  testChecker.yml  updateDatabase.yml
alembic/: env.py
alembic/ttt/: 12a91ff3996b_fix_email_uniquenes.py  2441184b3aa3_add_events_and_user_participation_to_.py  60146f40bc17_init.py  6ddf31156252_add_user_types.py  97d6460ed6e5_add_groups.py  9eea0522e1bc_add_meals.py  b482999436c7_fix_user_registry.py  bb840e8a133f_image_id_fix.py  fd381ce9b8dd_add_company_and_it_s_users.py
alembic/versions/: 0bae1f81d197_02-11-2023_13-04.py  12a91ff3996b_fix_email_uniquenes.py  16874c9d752e_21-08-2023_11-24.py  19a69372d0ba_01-03-2024_17-32.py  (+82 more)
auth/: auth_bearer.py  auth_handler.py
error/: error_handler.py
errors/: AuthenticationException.py  BaseException.py  InvalidDataException.py  NotFoundException.py  error_handler.py
install/: install.sh
mail_templates/: correu_acceptacio_event.html  correu_acceptacio_hackeps.html  correu_contacte.html  correu_dailyhack_entregat.html  correu_dailyhack_publicat.html  correu_inscripcio_hackeps.html  correu_recordatory.html  correu_registre.html  correu_reset_password.html  forgot_password.html  registration_confirmation.html
models/: Company.py  CompanyUser.py  Event.py  Geocaching.py  Hacker.py  LleidaHacker.py  MailQueue.py  Meal.py  Medal.py  Notification.py  Role.py  TokenData.py  User.py  UserConfig.py  imports.py
new/: database.py  main.py  models.py  schemas.py
routers/: HackerGroup.py  authentication.py  company.py  companyuser.py  event.py  eventmanagment.py  geocaching.py  gr.py  hacker.py  hackergroup.py  lleidahacker.py  lleidahackergroup.py  mail_queue.py  meal.py  notifications.py  user.py  userConfig.py  utils.py
schemas/: Company.py  CompanyUser.py  Event.py  Hacker.py  LleidaHacker.py  Meal.py  Notification.py  Token.py  User.py  Userconfig.py
services/: authentication.py  company.py  companyuser.py  email.py  event.py  eventmanagment.py  geocaching.py  hacker.py  hackergroup.py  lleidahacker.py  lleidahackergroup.py  mail.py  mail_queue.py  meal.py  notifications.py  user.py  userConfig.py  utils.py
src/: config.py  database.py  gunicorn_conf.py  imports.py  main.py
src/Meal/: model.py  (+3 more)
test/: conftest.py  stress_test.py  t.py  test.py  user.py
tokens/: token_updater.py
utils/: BaseService.py  Token.py  auth_bearer.py  hide_utils.py  service_utils.py  t.sh
(+272 files in other folders)
