[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "tonlls"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "openapi-python-client<1.0.0,>=0.20.0",
    "fastapi<1.0.0,>=0.111.0",
    "pydantic<3.0.0,>=2.7.1",
    "alembic<2.0.0,>=1.13.1",
    "SQLAlchemy<3.0.0,>=2.0.30",
    "FastAPI-SQLAlchemy<1.0.0,>=0.2.1",
    "python-jose<4.0.0,>=3.3.0",
    "PyJWT<3.0.0,>=2.8.0",
    "python-dateutil<3.0.0.0,>=2.9.0.post0",
    "pyyaml<7.0.0,>=6.0.1",
    "passlib<2.0.0,>=1.7.4",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "configparser<8.0.0,>=7.0.0",
    "gunicorn<23.0.0,>=22.0.0",
    "uvicorn>=0.34.0",
]
name = "lleidahackbackend"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openapi-python-client = "^0.20.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.30"
FastAPI-SQLAlchemy = "^0.2.1"
python-jose = "^3.3.0"
PyJWT = "^2.8.0"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
configparser = "^7.0.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
