[project]
name = "lleidahackbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "configparser>=7.1.0",
    "fastapi>=0.115.8",
    "fastapi-sqlalchemy>=0.2.1",
    "gunicorn>=23.0.0",
    "isort>=6.0.0",
    "openapi-python-client>=0.23.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-jose>=3.4.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.extend-per-file-ignores]
"alembic/*" = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
